--- a/css/integration-boxe.css
+++ b/css/integration-boxe.css
@@ -7,22 +7,129 @@ Contributor: MIKE PERNELLE
 
 
 body {
-   
+    background-color: black;
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.clear {
+    clear: both;
+}
+
 header {
+    background-color: #fff;
     display: flex;
+    height: 100px; 
+    padding-top: 20px;
+    padding-left: 180px;
 
 }
 
-.header-page{
+#main li a {
+    text-decoration: none;
     
+}
+
+.header-page{
     background-image: url("../img/header-page-catalogue.png");
+    background-repeat: no-repeat;
+    margin-left: 200px;
     height: 334px;
 }
 
 #main {
+    background-color: #fff;
+    display: flex;
+    flex-direction: row;
     width: 900px;
     margin: auto;
+}
+
+
+
+#main #gant-section1, #gant-section2 {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    height: auto;
+}
+
+#gant-section1, #gant-section2  {
+    width: 100%;
+}
+
+/* pour figure et figcaption  et les images*/
+img {
+    max-width: 100%;
+}
+
+figure {
+    display: flex;
+    /* flex-flow: column; */
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 270px;
+ }
+ 
+
+
+ figcaption {
+     background-color: rgba(255, 255, 255, 0.5);
+     /* padding: 10px;
+     min-height: 110px; */
+ }
+
+
+#service-footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.product_name {
+    font-size: 20px;
+    font-weight: 400;
+    margin-top: 0px
+}
+footer {
+    width: 900px;
+    margin: auto;
+    background-color: #fff;
+}
+#reseaux {
+   display: flex;
+   justify-content: center;
+
+
+}
+
+#footer-nav{
+    background: #f8f8f8;
+    padding: 10px;
+    margin-left: 12%;
+    margin-right: 12%;
+   
+    display: flex;
+    flex-direction: row;
+}
+
+a::before {
+    
+}
+
+#footer-nav a {
+    background: #f8f8f8;
+    align-content:space-around;
+    text-decoration: none;
+   margin: auto;
+   color: black;
+   /* padding-left: 8%;
+   padding-right: 8%; */
+
+}
+
+#service-bloc {
+    display: flex;
+    flex-direction: column;
+
 }
